--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,8 +4,8 @@
     "start_url": "/",
     "display": "standalone",
     "orientation": "portrait",
-    "background_color": "#000",
-    "theme_color": "#ffffff",
+    "background_color": "#000000",
+    "theme_color": "#A63446",
     "icons": [
         {
             "src": "/assets/icons/android-chrome-192x192.png",
