--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,6 @@ jobs:
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSH_KEY }}
       with:
-        source: "./build"
-        target: "/home/users/valeria"
-    - run: rsync -va --delete-after /home/users/valeria/build/ /var/www/blasswolf.com/html  
+        source: "./build/*"
+        target: "/home/users/${{ secrets.USERNAME }}/"
+    - run: rsync -va --delete-after /home/users/${{ secrets.USERNAME }}/build/ /var/www/blasswolf.com/html  
