--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,4 +25,11 @@ jobs:
       with:
         source: "./build/*"
         target: "/home/${{ secrets.USERNAME }}/"
-    - run: "rsync -va --delete-after /home/${{ secrets.USERNAME }}/build/ /var/www/blasswolf.com/html/"
+    - name: Executing remote  command
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSH_KEY }}    
+        script: rsync -va --delete-after /home/${{ secrets.USERNAME }}/build/ /var/www/blasswolf.com/html/
