--- a/package.json
+++ b/package.json
@@ -1,52 +1,30 @@
 {
-  "private": true,
-  "name": "web",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "preact build",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "jest ./tests"
-  },
- 
-  "lint-staged": {
-    "*.{css,md,scss}": "prettier --write",
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
-  },
-  "eslintIgnore": [
-    "build/*"
-  ],
-  "dependencies": {
-    "preact": "^10.3.1",
-    "preact-jsx-chai": "^3.0.0",
-    "preact-markup": "^2.0.0",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
-  },
-  "devDependencies": {
-    "@teamsupercell/typings-for-css-modules-loader": "^2.2.0",
-    "@types/enzyme": "^3.10.5",
-    "@types/jest": "^25.1.2",
-    "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "css-loader": "^3.5.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^2.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.1",
-    "jest": "^25.1.0",
-    "jest-preset-preact": "^1.0.0",
-    "lint-staged": "^10.0.7",
-    "preact-cli": "^3.0.0",
-    "prettier": "^1.19.1",
-    "sirv-cli": "^1.0.0-next.3",
-    "typescript": "^3.7.5"
-  }
+    "private": true,
+    "name": "web",
+    "version": "0.0.0",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.17.1",
+        "graphql": "^15.3.0",
+        "htm": "^3.0.4",
+        "ioredis": "^4.17.3",
+        "mime": "^2.4.6",
+        "preact": "^10.4.7",
+        "preact-render-to-string": "^5.1.10",
+        "requirex": "^0.3.3",
+        "tiny-jest": "^1.0.3",
+        "ts-node": "^8.10.2",
+        "uglify-js": "^3.10.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.7",
+        "@types/node": "^14.0.27",
+        "@types/uglify-js": "^3.9.3",
+        "ts-node-dev": "^1.0.0-pre.57",
+        "typescript": "^3.9.7"
+    },
+    "scripts": {
+        "dev": "ts-node-dev --respawn src/index.ts",
+        "start": "ts.node src/index.ts"
+    }
 }
