--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
         /* Basic Options */
+
         "target": "ES5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
-        "module": "ESNext" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+        "module": "commonjs" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
         // "lib": [],                             /* Specify library files to be included in the compilation:  */
         "allowJs": true /* Allow javascript files to be compiled. */,
         // "checkJs": true,                       /* Report errors in .js files. */
-        "jsx": "react" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
         "jsxFactory": "h" /* Specify the JSX factory function to use when targeting react JSX emit, e.g. React.createElement or h. */,
         // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
         // "sourceMap": true,                     /* Generates corresponding '.map' file. */
@@ -16,12 +16,12 @@
         // "removeComments": true,                /* Do not emit comments to output. */
         // "noEmit": true,                        /* Do not emit outputs. */
         // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
-        // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
+        "downlevelIteration": true /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */,
         // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
-        // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+        "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
         // "strictNullChecks": true,              /* Enable strict null checks. */
         // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
         // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
@@ -37,9 +37,9 @@
         //"baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
         // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-        "typeRoots": [
+        /*"typeRoots": [
             "./src/files.d.ts"
-        ] /* List of folders to include type definitions from. */,
+        ] /* List of folders to include type definitions from. ,*/
         //"types": [] /* Type declaration files to be included in compilation. */,
         // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
