--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.0",
     "license": "MIT",
     "dependencies": {
+        "create-emotion-server": "^10.0.27",
         "emotion": "^10.0.27",
         "emotion-server": "^10.0.27",
         "express": "^4.17.1",
@@ -22,8 +23,11 @@
         "@types/express": "^4.17.7",
         "@types/node": "^14.0.27",
         "@types/uglify-js": "^3.9.3",
+        "ts-loader": "^8.0.2",
         "ts-node-dev": "^1.0.0-pre.57",
-        "typescript": "^3.9.7"
+        "typescript": "^3.9.7",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12"
     },
     "scripts": {
         "dev": "ts-node-dev --respawn src/index.ts",
