--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "module": "commonjs" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
         // "lib": [],                             /* Specify library files to be included in the compilation:  */
         "allowJs": true /* Allow javascript files to be compiled. */,
-        // "checkJs": true,                       /* Report errors in .js files. */
+        // "checkJs": true,
+        "jsx": "react" /* Report errors in .js files. */,
         "jsxFactory": "h" /* Specify the JSX factory function to use when targeting react JSX emit, e.g. React.createElement or h. */,
         // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
         // "sourceMap": true,                     /* Generates corresponding '.map' file. */
