--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-    "private": true,
-    "name": "web",
-    "version": "0.0.0",
-    "license": "MIT",
-    "dependencies": {
-        "create-emotion-server": "^10.0.27",
-        "emotion": "^10.0.27",
-        "emotion-server": "^10.0.27",
-        "express": "^4.17.1",
-        "graphql": "^15.3.0",
-        "htm": "^3.0.4",
-        "ioredis": "^4.17.3",
-        "mime": "^2.4.6",
-        "preact": "^10.4.7",
-        "preact-render-to-string": "^5.1.10",
-        "requirex": "^0.3.3",
-        "tiny-jest": "^1.0.3",
-        "ts-node": "^8.10.2",
-        "uglify-js": "^3.10.1"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.7",
-        "@types/node": "^14.0.27",
-        "@types/uglify-js": "^3.9.3",
-        "ts-loader": "^8.0.2",
-        "ts-node-dev": "^1.0.0-pre.57",
-        "typescript": "^3.9.7",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
-    },
-    "scripts": {
-        "dev": "ts-node-dev --respawn src/index.ts",
-        "start": "ts.node src/index.ts"
-    }
+  "name": "blasswolf",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "typescript": "~3.7.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
