--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,25 @@
 {
-    "name": "BlassWolf",
-    "short_name": "BlassWolf",
-    "start_url": "/",
-    "display": "standalone",
-    "orientation": "portrait",
-    "background_color": "#000000",
-    "theme_color": "#A63446",
-    "icons": [
-        {
-            "src": "/assets/icons/android-chrome-192x192.png",
-            "type": "image/png",
-            "sizes": "192x192"
-        },
-        {
-            "src": "/assets/icons/android-chrome-512x512.png",
-            "type": "image/png",
-            "sizes": "512x512"
-        }
-    ]
+  "short_name": "BlassWolf",
+  "name": "BlassWolf",
+  "icons": [
+    {
+      "src": "favicon.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#A63446",
+  "background_color": "#000000"
 }
