--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "BlassWolf",
-    "short_name": "BlassWolf",
+    "name": "The Wolf Sigil",
+    "short_name": "TheWolfSigil",
     "start_url": "/",
     "display": "standalone",
     "orientation": "portrait",
