--- a/package.json
+++ b/package.json
@@ -1,52 +1,39 @@
 {
-  "private": true,
-  "name": "web",
-  "version": "0.0.0",
+  "name": "thewolfsigil.com",
+  "version": "2.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:TheWolfSigil/thewolfsigil.com.git",
+  "author": "ValeriaVG <valeria.viana.gusmao@gmail.com>",
   "license": "MIT",
-  "scripts": {
-    "build": "preact build",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "jest ./tests"
-  },
- 
-  "lint-staged": {
-    "*.{css,md,scss}": "prettier --write",
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
-  },
-  "eslintIgnore": [
-    "build/*"
-  ],
-  "dependencies": {
-    "preact": "^10.3.1",
-    "preact-jsx-chai": "^3.0.0",
-    "preact-markup": "^2.0.0",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
-  },
+  "private": true,
   "devDependencies": {
-    "@teamsupercell/typings-for-css-modules-loader": "^2.2.0",
-    "@types/enzyme": "^3.10.5",
-    "@types/jest": "^25.1.2",
-    "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "css-loader": "^3.5.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^2.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.1",
-    "jest": "^25.1.0",
-    "jest-preset-preact": "^1.0.0",
-    "lint-staged": "^10.0.7",
-    "preact-cli": "^3.0.0",
-    "prettier": "^1.19.1",
-    "sirv-cli": "^1.0.0-next.3",
-    "typescript": "^3.7.5"
+    "@types/aws-sdk": "^2.7.0",
+    "@types/chai": "^4.2.14",
+    "@types/ioredis": "^4.17.9",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.14",
+    "@types/uuid": "^8.3.0",
+    "chai": "^4.2.0",
+    "ioredis-mock": "^5.2.0",
+    "mocha": "^8.2.1",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@graphql-tools/merge": "^6.2.6",
+    "@graphql-tools/schema": "^7.1.2",
+    "aws-sdk": "^2.816.0",
+    "axios": "^0.21.1",
+    "graphql": "^15.4.0",
+    "graphql-scalars": "^1.6.1",
+    "ioredis": "^4.19.4",
+    "preact": "^10.5.7",
+    "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "start": "ts-node-dev -r tsconfig-paths/register src/index",
+    "test": "mocha -r ts-node/register -r tsconfig-paths/register  src/**/*.spec.ts"
   }
 }
