--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/ioredis": "^4.17.9",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
+    "@types/ramda": "^0.27.34",
     "@types/uuid": "^8.3.0",
     "chai": "^4.2.0",
     "ioredis-mock": "^5.2.0",
@@ -25,11 +26,8 @@
     "@graphql-tools/merge": "^6.2.6",
     "@graphql-tools/schema": "^7.1.2",
     "aws-sdk": "^2.816.0",
-    "axios": "^0.21.1",
-    "graphql": "^15.4.0",
-    "graphql-scalars": "^1.6.1",
     "ioredis": "^4.19.4",
-    "preact": "^10.5.7",
+    "ramda": "^0.27.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
