--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/chai": "^4.2.14",
+    "@types/formidable": "^1.0.32",
     "@types/ioredis": "^4.17.9",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
@@ -28,6 +29,7 @@
     "@graphql-tools/merge": "^6.2.6",
     "@graphql-tools/schema": "^7.1.2",
     "aws-sdk": "^2.816.0",
+    "formidable": "^1.2.2",
     "ioredis": "^4.19.4",
     "ramda": "^0.27.1",
     "uuid": "^8.3.2"
