--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "@types/ramda": "^0.27.34",
+    "@types/sass": "^1.16.0",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "chai": "^4.2.0",
     "ioredis-mock": "^5.2.0",
     "mocha": "^8.2.1",
+    "sass": "^1.32.0",
     "supertest": "^6.0.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
